--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Merriweather:wght@400;700&family=Roboto:wght@300;400;500;700&display=swap");
-
 :root {
   /* Define CSS Variables for your Hogwarts Colors */
   --hogwarts-primary-dark: #2b2b4a; /* Deep Castle Stone */
@@ -40,7 +38,6 @@ body {
 
 .gradient-background {
   background: linear-gradient(135deg, var(--hogwarts-primary-dark), #3f3f6e);
-  min-height: 100vh; /* Ensure it covers the full viewport */
 }
 
 /* Custom .container style, complementing Bootstrap's .container class */
@@ -53,7 +50,7 @@ body {
   ); /* Use parchment for background */
   overflow: auto;
   border: none;
-  box-shadow: 0 2px 5px var(--hogwarts-parchment), 0 0px 0 1px #f8f2e249;
+  box-shadow: 0 0 20px 4px var(--hogwarts-gold);
 }
 
 /* Home page specific styles - keep these if they are not MUI components */
@@ -103,11 +100,11 @@ body {
 }
 
 .nav-link:hover {
-  color: var(--hogwarts-gold) !important;
   font-weight: 700;
 }
 
 .nav-link.active {
+  color: var(--hogwarts-gold) !important;
   font-weight: 700;
 }
 
@@ -118,12 +115,7 @@ body {
 }
 
 .footer-link:hover {
-  color: var(--hogwarts-gold);
   font-weight: bold;
-}
-
-.navbar-brand:hover {
-  color:  var(--hogwarts-gold) !important;
 }
 
 /* Responsive adjustments - If you're using Bootstrap's responsive Navbar/Offcanvas,
@@ -132,21 +124,6 @@ body {
   /* These styles are likely for Bootstrap's Navbar/Offcanvas */
   .navbar-brand {
     font-size: 1.25rem;
-  }
-  .offcanvas-body .nav-link {
-    color: var(--hogwarts-text-light) !important;
-    font-size: 1.2rem;
-    padding: 0.75rem 0;
-    text-align: center;
-    border-bottom: none !important;
-  }
-
-  .offcanvas-body .nav-link:hover {
-    font-weight: 700 !important;
-  }
-
-  .offcanvas-body .nav-link.active {
-    font-weight: 700 !important;
   }
 
   .offcanvas-header {
@@ -160,6 +137,21 @@ body {
   }
   .offcanvas-body {
     background-color: var(--hogwarts-primary-dark);
+  }
+
+    .offcanvas-body .nav-link {
     color: var(--hogwarts-text-light);
+    font-size: 1.2rem;
+    padding: 0.75rem 0;
+    text-align: center;
+  }
+
+  .offcanvas-body .nav-link:hover {
+    font-weight: bold;
+  }
+
+  .offcanvas-body .nav-link.active {
+    font-weight: bold;
+    color: var(--hogwarts-gold);
   }
 }
